--- a/SwitchPlay/appsettings.json
+++ b/SwitchPlay/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SwitchPlayContext": "Server=LAPTOP-RDPL0MJR\\SQLEXPRESS;Database=SwitchPlayEnio;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SwitchPlayContext": "Server=DESKTOP-E3IVCBJ\\SQLEXPRESS;Database=SwitchPlayEnio;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
